# whatsaapIA-conect

./: README.md  package-lock.json  whatsaap-ia.md  whatsapp-automation-platform-specification.md
deploy-project/: .env  .env.example  .gitignore  README.md  deploy.py  docker-compose.yml
tools/: trasladosVendedorv2.py  var
whatsaap-backend/: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
whatsaap_backend/: .env.example  Dockerfile  README.md  pyproject.toml
whatsaap_backend/db/migration/: V10__create_security_settings.sql  V7__add_overview_report_indexes.sql  V8__create_secrets.sql  V9__create_drive_integration_configs.sql
whatsaap_backend/docs/architecture/: event-driven-architecture.md
whatsaap_backend/tests/application/: test_direct_delivery_service.py  test_process_incoming_message_service.py
whatsaap_backend/tests/infrastructure/: test_subprocess_script_sandbox.py
whatsaap_backend/tests/presentation/: test_business_messages_router.py  test_integrations_router.py  test_overview_router.py  test_rules_router.py  test_secrets_router.py  test_security_settings_router.py
whatsaap_backend/tests/unit/: test_bulk_csv.py  test_connector_client.py  test_errors.py  test_google_drive_client.py  test_query_traslado.py  test_rule_action_schema.py  test_rule_engine.py  test_services.py
whatsaap_backend/whatsaap_backend/: config.py
whatsaap_backend/whatsaap_backend/application/: bulk_csv.py  contracts.py  direct_delivery_service.py  ports.py  query_traslado.py  services.py
whatsaap_backend/whatsaap_backend/bootstrap/: __init__.py  api.py  healthcheck.py  worker_delivery.py  worker_rules.py
whatsaap_backend/whatsaap_backend/domain/: models.py  rule_engine.py
whatsaap_backend/whatsaap_backend/infrastructure/: security_settings.py
whatsaap_backend/whatsaap_backend/infrastructure/integrations/: google_drive_client.py
whatsaap_backend/whatsaap_backend/infrastructure/persistence/: models.py  repositories.py  uow.py
whatsaap_backend/whatsaap_backend/infrastructure/sandbox/: subprocess_script_sandbox.py
whatsaap_backend/whatsaap_backend/presentation/api/: errors.py  health_router.py  integrations_router.py  overview_router.py  reports_router.py  rules_router.py  schemas.py  secrets_router.py  security_settings_router.py  webhook_router.py
whatsapp-connector/: .dependency-cruiser.cjs  .dockerignore  .env  .env.example  .eslintrc.js  .gitignore  Dockerfile  README.md  docker-compose.yml  eslint.config.js  guia.md  jest.config.ts  jest.e2e.config.ts  jest.unit.config.ts  manage.py  package-lock.json  package.json
(+451 files in other folders)
