[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "whatsaap-backend"
version = "0.1.0"
description = "Event-driven WhatsApp automation backend"
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
  "aio-pika>=9.5,<10",
  "asyncpg>=0.30,<1",
  "fastapi>=0.115,<1",
  "google-api-python-client>=2.140,<3",
  "google-auth>=2.34,<3",
  "httpx>=0.28,<1",
  # Not used by our own code — installed so admin-uploaded RUN_SCRIPT actions
  # (e.g. "Solicitud Clave Genérica") can `import mysql.connector` to query
  # the external alocredit MySQL database, same rationale as selenium below.
  "mysql-connector-python>=9.1,<10",
  "prometheus-client>=0.21,<1",
  "pydantic-settings>=2.7,<3",
  # Not used by our own code — installed so admin-uploaded RUN_SCRIPT actions
  # (executed via the same interpreter, see infrastructure/sandbox/) can
  # `from selenium import webdriver` without needing a per-script venv.
  "selenium>=4.30,<5",
  "sqlalchemy[asyncio]>=2.0.36,<3",
  "structlog>=24.4,<26",
  "uvicorn[standard]>=0.34,<1",
  "valkey>=6.1,<7",
]

[project.optional-dependencies]
dev = [
  "bandit>=1.8,<2",
  "mypy>=1.14,<2",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
  "pytest-cov>=6,<7",
  "ruff>=0.9,<1",
]

[project.scripts]
whatsaap-api = "whatsaap_backend.bootstrap.api:main"
whatsaap-worker-rules = "whatsaap_backend.bootstrap.worker_rules:main"
whatsaap-worker-delivery = "whatsaap_backend.bootstrap.worker_delivery:main"
whatsaap-outbox-relay = "whatsaap_backend.bootstrap.outbox_relay:main"
whatsaap-connector-bridge = "whatsaap_backend.bootstrap.connector_bridge:main"

[tool.hatch.build.targets.wheel]
packages = ["whatsaap_backend"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q --strict-markers"

[tool.coverage.run]
branch = true
source = ["whatsaap_backend"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S", "SIM"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

[[tool.mypy.overrides]]
# google-api-python-client ships no py.typed marker / stubs.
module = "googleapiclient.*"
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests"]

